fix title on mobile page

--- a/src/app/components/movie/movie.component.css
+++ b/src/app/components/movie/movie.component.css
@@ -219,6 +219,9 @@ youtube-player {
     font-weight: bold;
     padding: 0;
     transform: none;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
   #runtime {
     font-size: 12px;
